# rm-workspace-api

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  copyright.txt  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.cfg  test_environment.env
.github/workflows/: build-image.yml  core-image.yml  main.yml  tag.yaml
ICD/: index.html
SDD/: index.html
deployment/: bucket-crd.yaml  container-registry-admin-secret.yaml  deploy.sh  harbor-helmrelease.yaml  workspace-api-deployment.yaml  workspace-api-ingress.yaml  workspace-api-rbac.yaml  workspace-api-service.yaml
deployment/workspace-charts/: kustomization.yaml  template-cm.yaml  template-hr-resource-guard.yaml  template-hr-rm-resource-catalogue.yaml  template-pvc.yaml
dev/: build.sh  create_test_secret.sh  pod_ip.sh  rebuild.sh
docs/ICD/03.interfaces/: 00.interfaces.adoc
docs/SDD/03.design/: 00.design.adoc
resources/: gunicorn.conf.py
scripts/: copyright.py
workspace_api/: README.md  __init__.py  config.py  models.py  pyproject.toml  views.py
workspace_api/tests/: __init__.py  conftest.py  test_buckets.py  test_sessions.py  test_stores.py  test_views.py  tests.http
workspace_ui/: README.md  build_dist.sh  index.html  package-lock.json  package.json  quasar.config.ts  vite.config.mjs
workspace_ui/luigi-shell/: index.html  ui.html
workspace_ui/luigi-shell/public/: index.html
workspace_ui/luigi-shell/standalone/: index.html
workspace_ui/luigi-shell/standalone/config/: 001-app-config.js  002-app-config.js  003-app-config.js  004-app-config.js  005-app-config.js  app-config.js
workspace_ui/management/: package-lock.json  package.json  quasar.config.ts
workspace_ui/management/public/: ui.html
workspace_ui/management/public/config/: app-config.js
workspace_ui/management/src/components/: BucketRequestsTab.vue  BucketsTab.vue  DatabasesTab.vue  MembersTab.vue  SessionsTab.vue  StoresTab.vue
workspace_ui/management/src/composables/: useLuigi.ts  useLuigiContext.ts
workspace_ui/management/src/models/: models.ts
workspace_ui/management/src/pages/: HomePage.vue  ManagementPage.vue
workspace_ui/management/src/services/: api.ts  common.ts  sorting.ts  storageQuantity.ts
workspace_ui/management/src/stores/: userStore.ts
workspace_ui/management/src/types/: luigi.d.ts  workspace.d.ts
workspace_ui/management/test/: storageQuantity.test.ts
workspace_ui/public/: ui.html
workspace_ui/src/: main.js
workspace_ui/src/models/: models.ts
workspace_ui/src/pages/: HomePage.vue  ManagementPage.vue
workspace_ui/src/types/: workspace.d.ts
workspace_ui/src/views/: HomeView.vue
workspace_ui/vue-app/: .gitignore  README.md  app.html  package-lock.json  package.json  quasar.config.ts  vite.config.mjs
workspace_ui/vue-app/src/composables/: useLuigi.ts
workspace_ui/vue-app/src/models/: models.ts
workspace_ui/vue-app/src/pages/: HomePage.vue  ManagementPage.vue
workspace_ui/vue-app/src/router/: index.js  routes.ts
workspace_ui/vue-app/src/views/: ManagementView.vue
