[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "workspace-api"
description = "Workspace API"
authors = [{ name = "EOX" }, { name = "Versioneer" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
keywords = ["workspace"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "aiocache[memcached]>=0.12.3,<1",
  "aiohttp[speedups]>=3.12.15,<4",
  "authlib>=1.6.3,<2",
  "boto3>=1.40.22,<2",
  "fastapi>=0.116.1,<1",
  "httpx>=0.28.1,<1",
  "itsdangerous>=2.2.0,<3",
  "jinja2>=3.1,<4",
  "kubernetes>=33.1.0,<34",
  "markdown>=3.8.2,<4",
  "markdown-full-yaml-metadata>=2.2.1,<3",
  "pydantic>=2.11.7,<3",
  "python-dotenv>=1.1.1,<2",
  "python-slugify>=8.0.4,<9",
  "pyyaml>=6.0.2,<7",
  "requests>=2.32.5,<3",
  "shapely>=2.1.1,<3",
  "starlette>=0.47.3,<1",
  "starlette-exporter>=0.21.0,<1",
  "typing-extensions>=4.15.0,<5"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/EOEPCA/rm-workspace-api"
Source = "https://github.com/EOEPCA/rm-workspace-api"
Bug-Tracker = "https://github.com/EOEPCA/rm-workspace-api/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "ruff>=0.12,<0.13",
  "pre-commit>=4.3,<5",
  "types-Markdown>=3.8.0.20250,<3.9",
  "types-PyYAML>=6.0.12.20250822,<7",
  "types-requests>=2.32.4.20250809,<3",
  "types-python-slugify>=8.0.0.1,<9",
  "uvicorn>=0.35.0,<1",
  "pytest>=8.4.1,<9",
  "pytest-watcher>=0.4.2,<1",
  "ipdb>=0.13.13,<1",
  "requests-mock>=1.12.1,<2"
]
prod = [
  "uvicorn[standard]>=0.35.0,<1",
  "gunicorn>=22.0.0,<23"
]

[tool.hatch.build.targets.wheel]
packages = ["workspace_api"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.mypy]
no_implicit_optional = true
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[tool.ruff]
required-version = ">=0.12.0,<0.13"
target-version = "py312"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["F","E","W","C90","I","N","D","UP","ERA","PGH","PL","TRY","FLY","PERF","RUF","A","ANN","ARG","ASYNC","B","BLE","C4","COM","DTZ","EM","EXE","FIX","G","ICN","INP","ISC","PIE","PYI","Q","RET","RSE","S","SIM","SLF","T20","TD","TID"]
ignore = ["ANN401","COM812","D100","D101","D102","D103","D104","D105","D106","D107","D203","D213","D301","D417","G004","ISC001","PLR2004","RET504","TD002","TD003","TRY400","TRY003"]

[tool.ruff.lint.per-file-ignores]
"workspace_api/__init__.py" = ["E402", "F401"]
"workspace_api/providers/client/gitlab.py" = ["N801", "N815"]
"resources/**/*.py" = ["INP001"]
"workspace_api/tests/**/*.py" = ["ANN001", "ANN201", "S101", "ARG001"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 13
max-branches = 15
max-statements = 60
